Fix block indicators overlapping

--- a/src/components/block-indicators/editor.scss
+++ b/src/components/block-indicators/editor.scss
@@ -1,3 +1,8 @@
+// Fixes overlapping of block indicators commented on https://github.com/maxi-blocks/maxi-blocks/pull/3955#discussion_r1043205659
+body.maxi-blocks--active .maxi-container-block:hover {
+	z-index: 99999999;
+}
+
 .maxi-block-indicators {
 	position: absolute;
 	top: 0;
@@ -7,14 +12,17 @@
 	transition: all 0.5s;
 	--maxi-block-indicators-min-size: 5px;
 	--maxi-block-indicators-max-size: 20px;
+
 	&__padding {
 		background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%23007CBA' fill-opacity='0.2' fill-rule='evenodd'%3E%3Cpath d='M5 0h1L0 6V5zM6 5v1H5z'/%3E%3C/g%3E%3C/svg%3E");
 		border: 1px solid #c7e6f7;
 	}
+
 	&__margin {
 		background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%231FBA00' fill-opacity='0.2' fill-rule='evenodd'%3E%3Cpath d='M5 0h1L0 6V5zM6 5v1H5z'/%3E%3C/g%3E%3C/svg%3E");
 		border: 1px solid #d2f6cb;
 	}
+
 	.maxi-block-indicator {
 		position: absolute;
 		display: flex;
